# Agent

./: .gitignore  CLAUDE.md  DESKTOP_AGENT_PLAN.md  index.html  memory-agent-pc.md  package-lock.json  package.json  start.bat  start.ps1  tsconfig.app.tsbuildinfo  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: code_index.rs  deepseek.rs  lib.rs  main.rs  mcp.rs  mcp_server.rs  sandbox.rs  session.rs  settings.rs  skills.rs  terminal.rs
src-tauri/src/agent/: context.rs  loop.rs  mod.rs  tool_parser.rs  types.rs
src-tauri/src/tools/: bash.rs  bash_safety.rs  code_search.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  sub_agent.rs  web_search.rs  worktree.rs  write.rs
src/components/: ApprovalDialog.tsx  ChatArea.tsx  Dashboard.tsx  FileTree.tsx  MarkdownBlock.tsx  MonacoEditor.tsx  ObsidianCallout.tsx  SessionList.tsx  SettingsDialog.tsx  SkillManager.tsx  StatusBar.tsx  TerminalPanel.tsx  ToolCallCard.tsx
src/stores/: fileStore.ts  sessionStore.ts  settingsStore.ts  skillStore.ts  uiStore.ts
